[package]
name = "ruhear"
version = "0.1.0"
edition = "2021"
authors = ["aizcutei <aiz.cutei@gmail.com>"]
description = "A library for capturing audio from the system."
license = "Apache-2.0"

repository = "https://github.com/aizcutei/ruhear"
documentation = "https://docs.rs/ruhear"
keywords = ["audio", "capture"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.2.8"
cidre = { git = "https://github.com/yury/cidre/", features = [
    "blocks",
    "async",
    "dispatch",
    "av",
    "cf",
    "cat",
    "cm",
    "ns",
    "sc",
    "vt",
], default-features = false }
futures = "0.3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
cpal = "0.15.2"

[[example]]
name = "capture"

[[example]]
name = "error"
